syntax = "proto3";
package dfs;
option go_package = "./proto";

service FileService {
  rpc Put(PutRequest) returns (PutResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc AddPeer(AddPeerRequest) returns (AddPeerResponse);
  rpc RemovePeer(RemovePeerRequest) returns (RemovePeerResponse);
  rpc SyncMetadata(SyncMetadataRequest) returns (SyncMetadataResponse);
}

message PutRequest {
  string key = 1;
  bytes data = 2;
}

message PutResponse {}

message GetRequest { string key = 1; }

message GetResponse { bytes data = 1; }

message AddPeerRequest {
  string id = 1;
  string address = 2;
}

message AddPeerResponse {}

message RemovePeerRequest { string id = 1; }

message RemovePeerResponse {}

message Metadata {
  string path = 1;
  uint64 version = 2;
  bytes hash = 3;
  repeated uint64 replicas = 4;
  bool deleted = 5;
}

message SyncMetadataRequest { Metadata meta = 1; }

message SyncMetadataResponse {}
